@@ -28,6 +28,7 @@ DECLARE
   dataBox GEOMETRY;
   dataMagnitude FLOAT8;
   minGridSize FLOAT8;
+  minEdgeExtent FLOAT8;
 BEGIN
   topo := findTopology(toponame);
   IF topo.id IS NULL THEN
@@ -72,6 +73,29 @@ BEGIN
 
   -- TODO: recursively grow working bbox to include all edges connected
   --       to all endpoints of edges intersecting it ?
+
+  --
+  -- Guard against snapping a whole edge to a single grid point.
+  -- With a grid size wider than the smallest edge extent every vertex would
+  -- quantize to the same coordinate, producing EMPTY geometries and breaking
+  -- the topology. Raising early keeps the caller in control of a safer grid
+  -- selection.
+  --
+  sql := format(
+    $$
+SELECT min(greatest(
+    abs(ST_XMax(geom) - ST_XMin(geom)),
+    abs(ST_YMax(geom) - ST_YMin(geom))
+  ))
+FROM %1$I.edge_data
+WHERE ($1 IS NULL OR geom && $1)
+    $$, topo.name
+  );
+  EXECUTE sql USING bbox INTO minEdgeExtent;
+
+  IF minEdgeExtent IS NOT NULL AND gridSize > minEdgeExtent THEN
+    RAISE EXCEPTION 'Grid size % exceeds smallest edge extent % and would erase edges', gridSize, minEdgeExtent;
+  END IF;
 
   sql := format(
     $$
