@@ -3,3 +3,4 @@ NOTICE:  Every vertex is precise in an empty topology
 ERROR:  Presence of max ordinate value 1002003008 requires a minimum grid size of 3.60721082879999e-6
 start|e|1|LINESTRING(123456789 0.1,6 -1002003004)
 prec5|e|1|LINESTRING(123456790 0,5 -1002003005)
+ERROR:  Grid size 5 exceeds smallest edge extent 1 and would erase edges
